--- a/011-3D书/index.css
+++ b/011-3D书/index.css
@@ -7,7 +7,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('static/floor.jpg');
+    background: url('../static/img/floor.jpg');
     background-attachment: fixed;
     background-size: cover;
 }
@@ -30,7 +30,7 @@ body{
     content: '';
     width: 30px;
     height: 100%;
-    background: url(static/book.jpg);
+    background: url('../static/img/book_cover.jpg');
     position: absolute;
     top: 0;
     left: 0;
@@ -58,7 +58,7 @@ body{
     color: #ffffff;
 }
 .book h2 span{
-    background: url(static/book.jpg);
+    background: url('../static/img/book_cover.jpg');
     font-size: 0.8em;
     background-attachment: fixed;
     -webkit-background-clip: text;
@@ -83,6 +83,6 @@ body{
     left: 0;
     width: 100%;
     height: 70%;
-    background: url(static/book.jpg);
+    background: url('../static/img/book_cover.jpg');
     background-size: cover;
 }
